# Chronos

./: CLA.md  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: architecture.md  backup-restore.md  customer-requirements-specification.md  functional-specification.md  roadmap.md
infrastructure/docker/: .env.dev  .env.example  .env.prod.example  compose.dev.yaml  compose.prod.yaml  docker-compose.dev.yaml  docker-compose.prod.yaml
infrastructure/docker/backup/: run.sh
infrastructure/docker/traefik/: traefik.prod.yaml  traefik.yaml
services/api/: Dockerfile  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 0001_init_users.py  0004_auth_rate_limit.py  0005_password_policy.py  0006_audit_events_seq_identity.py
services/api/app/: cli.py  config.py  csrf.py  db.py  deps.py  main.py  security.py
services/api/app/models/: audit.py  enums.py  user.py
services/api/app/routers/: auth.py  delegates.py  exports.py  health.py  preferences.py  shifts.py  users.py  workflows.py
services/api/app/services/: auth_rate_limit.py
services/api/tests/: test_auth_rate_limit.py  test_auth_route_introspection.py  test_password_policy.py  test_session_lifecycle.py  test_shifts_permissions.py  test_user_rotate_schema.py  test_workflows_rbac.py
services/api/tests/integration/: conftest.py  test_leave_flow.py
services/api/tests/unit/: conftest.py  test_audit_coverage.py  test_cli_password_flow.py  test_config_entropy.py  test_csrf_middleware.py  test_migration_0005.py  test_no_utcnow.py
services/frontend/: Dockerfile  nginx.conf  package-lock.json  package.json  vite.config.ts
services/worker/: Dockerfile  pyproject.toml
services/worker/app/: config.py  main.py
(+9 files in other folders)
